fix: use overflow:clip instead of overflow:hidden to fix sticky cards stacking

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,6 @@
 
 .animation-wrapper {
   position: relative;
-  overflow: hidden;
+  overflow: clip;
   min-height: 100dvh;
 }
